--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ pytest==6.2.4
 pytz==2021.1
 requests==2.26.0
 sqlparse==0.4.1
-stripe==2.60.0
+six==1.17.0
+stripe==12.4.0
 toml==0.10.2
 urllib3==1.26.6
